--- a/app/src/components/OnboardingOverlay.scss
+++ b/app/src/components/OnboardingOverlay.scss
@@ -42,6 +42,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        text-align: left;
 
         li {
             display: flex;
